<resources>
    <string name="app_name">Celebrity Prank Video Call</string>

    <string name="tmc_part_1" translatable="false">The application is notifying you to the presence of an app that provides several services that are essential information for safer and more efficient use.</string>
    <string name="tmc_text_1" translatable="false">By pressing the Accept button, I declare I have read and accepted the following condition of use.</string>
    <string name="tmc_text_2" translatable="false">If we find the app is being used outside its terms of use, we may restrict access to it.</string>
    <string name="tmc_text_3" translatable="false">Any type of modification to the app or its components is not allowed.</string>
    <string name="tmc_text_4" translatable="false">Privacy Policy may be updated from time to time for any reason. We will notify you of any changes to our Privacy Policy by posting the new Privacy Policy here.</string>
    <string name="tmc_text_5" translatable="false">We do not share any kind of your Personal Data with third parties.</string>
    <string name="following_link" translatable="false">Following link:\t</string>
    <string name="privacy_hyper" translatable="false"><b><u>Privacy Policy</u></b></string>
    <string name="privacy_policy" translatable="false">Privacy policy</string>
    <string name="terms_and_condition" translatable="false">Terms &amp; Conditions</string>
    <string name="tmc_hyper" translatable="false"><b><u>Terms &amp; Condition</u></b></string>
    <string name="txt_ok" translatable="false">OK</string>
    <string name="terms_of_use_text_6" translatable="false">You can find out more information by clicking on the</string>
    <string name="txt_accept" translatable="false">Accept</string>

    <string name="tmc" translatable="false">
Posting rules you should be taking care of before you start interaction on our website/application:
\n
\nAssuring you carry the rights and eligibility to post any form of content you are about to share. We never permit nudism on application/website.
\n
\nWe won\'t allow posting of sexually explicit content, sexually explicit text, images, or audio content depicting extreme sexual acts such as acts of posting Content that drives traffic to pornographic online services. Please note that we may make exceptions based on artistic, educational, historical, documentary, or scientific nature, or where there are other considerable benefits to the public at large.
\n
\nWe don\'t permit encouragement or applaud towards terrorism, formed crime scenes or hate association groups on our application/website. Attempting to sell sexual services or weapons and harmful drugs are also not permitted. We will remove reasonable threats of severity, hate arousing content/speech and the intentionally pointing of private individuals. We do not permit attacks/abuse based on skin colour, native, sex, gender, gender identity, sexual orientation, religion, disability or disease.
\n
\nGraphic violence is not allowed and we may remove videos or images of intense, graphic violence to make sure our application/website stays appropriate for everyone.
\n
\nIf anyone or any account is spotted doing the above restricted activities they can be booked and arrested for the same. If viewers spot any violations of the above rules they have the right to report the content to us by using the report feature given in our application/ website.
    </string>

    <string name="select_language">Select Language</string>
    <string name="next" >Next</string>
    <string name="english" translatable="false">English</string>
    <string name="hindi" translatable="false">हिंदी</string>
    <string name="spanish" translatable="false">Español</string>
    <string name="french" translatable="false">Français</string>
    <string name="portuguese" translatable="false">Português</string>
    <string name="korean" translatable="false">한국어</string>
    <string name="russian" translatable="false">Русский</string>
    <string name="arabic" translatable="false">العربية</string>
    <string name="japanese" translatable="false">日本語</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="permission_required">Permission Required</string>
    <string name="grant_permission">Grant permission</string>
    <string name="call_any_celebrity">Call any celebrity</string>
    <string name="Celebrity_Video_call">Celebrity video call</string>
    <string name="Celebrity_chat">Celebrity Chat</string>

    <string name="one_tap_calling_to_connect_with_your_favourite_ncelebrities">One-tap calling to connect with your favourite\ncelebrities.</string>
    <string name="experience_face_to_face_calls_with_any_ncelebrity_you_want">Experience face-to-face calls with any\ncelebrity you want.</string>
    <string name="send_messages_and_fan_love_directly_to_nyour_beloved_celebrity">Send messages and fan love directly to\nyour beloved celebrity</string>
    <string name="rate_us">Rate Us</string>
    <string name="effortlessly_call_your_nfavourite_celebrity_with_njust_one_tap">Effortlessly Call your\nfavourite celebrity with\njust one tap</string>
    <string name="messages">Messages</string>
    <string name="audio_call">Audio Call</string>
    <string name="video_call">Video Call</string>
    <string name="call_history">Call History</string>
    <string name="about">About</string>
    <string name="share">Share</string>
    <string name="language">Language</string>
    <string name="txt_download">Download the amazing celebrity prank video call now !!</string>
    <string name="txt_app_invitattion">Download Invitation</string>
    <string name="select_category">Select Category</string>
    <string name="hollywood">Hollywood</string>
    <string name="bollywood">Bollywood</string>
    <string name="rate_us1">Rate Us!</string>
    <string name="do_you_really_want_to_exit_the_app">Do you really want to exit the app?</string>
    <string name="exit_app">Exit App</string>
    <string name="type_here_to_search_something">Type here to search something</string>
    <string name="get_started">Get Started</string>
    <string name="drawer_close">Drawer close</string>


    <string name="drawer_open">Drawer Open</string>
    <string name="chat">Chat</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="speaker">Speaker</string>
    <string name="mute">Mute</string>
    <string name="type_something">Type something</string>
    <string name="suggestions">Suggestions</string>
    <string name="connecting_please_wait">Connecting please wait...</string>
    <string name="typing">Typing...</string>
    <string name="please_wait_for_reply">Please wait for reply.</string>
    <string name="camera_access">Camera Access</string>
    <string name="select_your_partner">Select your partner</string>

    <string name="hold">Hold</string>
    <string name="privacy_policy_trans">Privacy policy</string>

    <string name="internet_connection_is_required">Internet Connection is required</string>
    <string name="start_a_new_chat">Start a new chat</string>
    <string name="no_chats_found">No Chats found</string>
    <string name="no_audio_call_history_found">No audio call history found</string>
    <string name="start_a_call">Start a call</string>
    <string name="no_video_call_history_found">No Video call history found</string>
    <string name="start_a_video_call">Start a video call</string>
    <string name="history">History</string>
    <string name="online">online</string>
    <string name="this_function_needs_to_be_implemented">This function needs to be implemented</string>

</resources>