<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_blue"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".splash.TCSFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:strokeWidth="0dp"
        android:id="@+id/toolbarCard"
        app:cardBackgroundColor="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:paddingTop="40dp"
            android:paddingHorizontal="15dp"
            android:paddingBottom="10dp"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/ic_back_arrow"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="wrap_content"
                android:id="@+id/btnBackArrow"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="40dp"
                app:layout_constraintTop_toTopOf="@id/btnBackArrow"
                app:layout_constraintBottom_toBottomOf="@id/btnBackArrow"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textAlignment="center"
                android:text="@string/terms_of_use"
                android:fontFamily="@font/inter_medium"
                android:maxLines="1"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <View
        android:layout_width="match_parent"
        android:background="@color/white"
        android:id="@+id/whiteLine"
        app:layout_constraintTop_toBottomOf="@id/toolbarCard"
        android:layout_height="1dp"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/whiteLine"
        app:layout_constraintBottom_toTopOf="@id/btn_agree"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:descendantFocusability="afterDescendants"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/tmc_part_1"
                android:textColor="@color/white"
                android:fontFamily="@font/inter_medium"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:paddingTop="8dp">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_tu_1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:justificationMode="inter_word"
                    android:text="@string/tmc_text_1"
                    android:textColor="@color/white"
                    android:fontFamily="@font/inter_medium"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_tu_2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:justificationMode="inter_word"
                    android:text="@string/tmc_text_2"
                    android:textColor="@color/white"
                    android:fontFamily="@font/inter_medium"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_tu_3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:justificationMode="inter_word"
                    android:text="@string/tmc_text_3"
                    android:textColor="@color/white"
                    android:fontFamily="@font/inter_medium"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_tu_4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:justificationMode="inter_word"
                    android:text="@string/tmc_text_4"
                    android:textColor="@color/white"
                    android:fontFamily="@font/inter_medium"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_tu_5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:justificationMode="inter_word"
                    android:text="@string/tmc_text_5"
                    android:textColor="@color/white"
                    android:fontFamily="@font/inter_medium"
                    android:textSize="14sp" />
            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:justificationMode="inter_word"
                android:text="@string/terms_of_use_text_6"
                android:textColor="@color/white"
                android:fontFamily="@font/inter_medium"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/following_link"
                    android:elevation="2dp"
                    android:translationZ="2dp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/inter_medium"
                    android:textSize="14sp" />

                <Button
                    android:backgroundTint="@android:color/transparent"
                    android:id="@+id/btn_tmc"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:padding="0dp"
                    android:text="@string/tmc_hyper"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/inter_medium"
                    android:textStyle="bold"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/following_link"
                    android:textColor="@color/white"
                    android:elevation="2dp"
                    android:translationZ="2dp"
                    android:fontFamily="@font/inter_medium"
                    android:textSize="14sp" />

                <Button
                    android:backgroundTint="@android:color/transparent"
                    android:id="@+id/btn_privacy"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:padding="0dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/privacy_hyper"
                    android:textColor="@color/white"
                    android:fontFamily="@font/inter_medium"
                    android:textStyle="bold"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_agree"
        android:layout_width="166dp"
        android:layout_height="48dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/white"
        app:cornerRadius="20dp"
        android:gravity="center"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="Accept"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/smallNativeAdd"
        android:fontFamily="@font/inter_medium"
        android:textColor="@color/darkBlue"
        android:textSize="16sp" />

    <com.adsmodule.api.adsModule.interfaces.CustomView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:adType="small"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/smallNativeAdd"/>

</androidx.constraintlayout.widget.ConstraintLayout>