<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_blue"
    tools:context=".home.NavViewFragment">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/ivLogo"
        android:layout_marginTop="77dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/celebrity_prank_logo"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="66dp"
        app:layout_constraintTop_toBottomOf="@id/ivLogo">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/tvAbout"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="37dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="21dp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/about"
            android:textColor="@color/darkBlue"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/llShare"
            android:padding="7dp"
            android:layout_marginTop="25dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="21dp"
            app:layout_constraintTop_toBottomOf="@id/tvAbout"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_share_arrow"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:id="@+id/tvShare"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/share"
                android:layout_marginStart="15dp"
                android:textColor="@color/darkBlue"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/llLang"
            android:padding="7dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="21dp"
            app:layout_constraintTop_toBottomOf="@+id/llShare"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_globe"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:id="@+id/tvLang"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/language"
                android:layout_marginStart="15dp"
                android:textColor="@color/darkBlue"/>

        </LinearLayout>

        <LinearLayout
            android:padding="7dp"
            android:layout_width="match_parent"
            android:id="@+id/llRateUs"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="21dp"
            app:layout_constraintTop_toBottomOf="@+id/llLang"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_rate_us_star"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:id="@+id/tvRateus"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/rate_us"
                android:layout_marginStart="15dp"
                android:textColor="@color/darkBlue"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/llPP"
            android:layout_marginTop="10dp"
            android:padding="7dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="21dp"
            app:layout_constraintTop_toBottomOf="@+id/llRateUs"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_pp_page"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:id="@+id/tvPP"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/privacy_policy_trans"
                android:layout_marginStart="15dp"
                android:textColor="@color/darkBlue"/>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>