<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/bg_blue"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:strokeWidth="0dp"
        android:id="@+id/toolbarCard"
        app:cardBackgroundColor="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:paddingTop="40dp"
            android:paddingBottom="10dp"
            android:layout_height="wrap_content">

            <ImageButton
                android:background="?attr/selectableItemBackgroundBorderless"
                android:backgroundTint="@android:color/transparent"
                android:src="@drawable/ic_back_arrow"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="50dp"
                android:id="@+id/btnBackArrow"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_height="50dp"/>

            <TextView
                android:layout_width="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="50dp"
                app:layout_constraintTop_toTopOf="@id/btnBackArrow"
                app:layout_constraintBottom_toBottomOf="@id/btnBackArrow"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textAlignment="center"
                android:text="@string/terms_and_condition"
                android:fontFamily="@font/inter_medium"
                android:maxLines="1"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <View
        android:layout_width="match_parent"
        android:background="@color/white"
        android:id="@+id/whiteLine"
        app:layout_constraintTop_toBottomOf="@id/toolbarCard"
        android:layout_height="1dp"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:descendantFocusability="afterDescendants"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/tmc"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/btn_agree"
        android:visibility="gone"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="24dp"
        android:gravity="center"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/txt_ok"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <com.adsmodule.api.adsModule.views.NativeView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:adType="SMALL"
        android:id="@+id/smallNativeAd"/>

</LinearLayout>